tests/ui/errors/auto-impl.tuple-name.rs
#[fortuples::auto_impl]
#[tuples::tuple_name(A)]
trait Test {}

fn main() {}
